fix: title styles and header align buttons (#262)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,25 +27,31 @@
   h3,
   h4,
   h5,
-  h6 {
+  h6,
+  .h1,
+  .h2,
+  .h3,
+  .h4,
+  .h5,
+  .h6 {
     @apply font-lato font-semibold text-dark-1000 !mb-0;
   }
-  h1 {
+  h1, .h1 {
     @apply text-[40px] leading-[46px] lg:text-[60px] lg:leading-[68px];
   }
-  h2 {
+  h2, .h2 {
     @apply text-[32px] leading-tight lg:text-[44px] lg:leading-[50px];
   }
-  h3 {
+  h3, .h3 {
     @apply text-[24px] leading-7 lg:text-[32px] lg:leading-[38px];
   }
-  h4 {
+  h4, .h4 {
     @apply text-lg leading-6 lg:text-[24px] lg:leading-[29px];
   }
-  h5 {
+  h5, .h5 {
     @apply text-[18px] leading-[22px] lg:text-lg lg:leading-6;
   }
-  h6 {
+  h6, .h6 {
     @apply text-sm leading-5 lg:text-[18px] lg:leading-[22px];
   }
   input[type='radio'] {
